--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
-    "uiv": "^0.13.0",
+    "bootstrap": "^3.3.7",
+    "uiv": "^0.13.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
